# Atakama-NameDetectorPlugin

./: Makefile  README.md  pyproject.toml  requirements.txt
plugin_template/: __init__.py  plugin.py
tests/: test_plugin.py
